--- a/templates/index.html
+++ b/templates/index.html
@@ -22,22 +22,57 @@
         <link href="css/styles.css" rel="stylesheet" />
     </head>
 	 <!-- End of Head-->
-	 
+	 <style>
+        .center-header{
+        padding-top: 20%;
+        padding-bottom: 20%;
+
+        .form-group mx-sm-3 mb-2{
+
+            padding: 10%;
+        }
+        button{
+            margin: 5%;
+        }
+    }
+     </style>
+     
     <body>
         <!-- Navigation-->
-        <nav class="navbar navbar-dark bg-dark static-top">
+        <!-- <nav class="navbar navbar-dark bg-dark static-top">
             <div class="container">
                 <a class="navbar-brand" href="#!">Classification</a>
                 <a class="navbar-brand" href="#about">Mathematics</a>
                 <a class="navbar-brand" href="#about">About</a>
                 <a class="navbar-brand" href="#about">Home</a>
             </div>
-        </nav>
+        </nav> -->
+
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">SotfTest</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="#">Classification</a>
+                <a class="nav-link" href="#">Mathematics</a>
+                <a class="nav-link" href="#">about</a>
+              </div>
+            </div>
+          </nav>
+
+
+
+
         <!-- Masthead-->
       
 				<div class="container position-relative">
 					<div class="row justify-content-center">
+                        
 						<div class="col-xl-100">
+
 							<div class="center-header">
                                 <!-- Page heading-->
                                 <table>
@@ -58,7 +93,7 @@
 
                             <th>
                                 <div class="form-group mx-sm-3 mb-2">
-                                    <h4 align="center" class="mb-1 top-header">Enter Gender</h4>
+                                    <h4  class="mb-1 top-header">Enter Gender</h4>
                                 </div>
                                 <div class="form-inline" id="frm">
                                     <div class="form-group mx-auto mb-2">
@@ -101,7 +136,7 @@
 
                                 <th>
                                     <div class="form-group mx-sm-3 mb-2">
-                                        <h4 align="center" class="mb-1 top-header">Enter Smoking</h4>
+                                        <h4  class="mb-1 top-header">Enter Smoking</h4>
                                     </div>
                                     <div class="form-inline" id="frm">
                                         <div class="form-group mx-auto mb-2">
@@ -116,7 +151,7 @@
 
                                 <th>
                                     <div class="form-group mx-sm-3 mb-2">
-                                        <h4 align="center" class="mb-1 top-header">Enter Region</h4>
+                                        <h4 class="mb-1 top-header">Enter Region</h4>
                                     </div>
                                     <div class="form-inline" id="frm">
                                         <div class="form-group mx-auto mb-2">
