--- a/templates/index.html
+++ b/templates/index.html
@@ -209,6 +209,9 @@
             </div>
         </div>
         </section>
+        <div class="features-icons-item mx-auto mb-0 mb-lg-3">
+            <h3>Total Prediction: {{ total_pred }}</h3>
+        </div>
         <!-- Image Showcases-->
  <!-- Icons Grid-->
        
