--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -19,7 +21,7 @@
 		  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 		  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
+        <link href="static/styles.css" rel="stylesheet" />
     </head>
 	 <!-- End of Head-->
 	 
@@ -35,7 +37,7 @@
         </nav>
         <!-- Masthead-->
       
-				<div class="container position-relative">
+				<div id = "Masthead" class="container position-relative">
 					<div class="row justify-content-center">
 						<div class="col-xl-100">
 							<div class="center-header">
@@ -145,9 +147,9 @@
         
         <!-- Icons Grid-->
         <section class="features-icons bg-light text-center">
-            <div class="container">
+            <div id = "icongrid" class="container">
                 <div class="row">
-                    <div class="col-lg-4">
+                    <div id = "box_age" class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                             <div class="features-icons-icon d-digits"><i class="bi bi-clipboard-check m-auto text-primary"></i></div>
                             <h3>Age</h3>
@@ -155,7 +157,7 @@
 							<h3 id='sectionAge'> {{ age }} </h3>
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div id = "box_gender" class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                             <div class="features-icons-icon d-flex"><i class="bi bi-clipboard-check m-auto text-primary"></i></div>
                             <h3>Gender</h3>
@@ -163,7 +165,7 @@
 							<h3 id='sectionGender'> {{ gender }} </h3>
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div id = "box_bmi" class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                             <div class="features-icons-icon d-flex"><i class="bi bi-clipboard-check m-auto text-primary"></i></div>
                             <h3>BMI</h3>
@@ -171,7 +173,7 @@
 							<h3 id='sectionBMI'> {{ bmi }} </h3>
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div id = "box_children" class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                             <div class="features-icons-icon d-flex"><i class="bi bi-clipboard-check m-auto text-primary"></i></div>
                             <h3>Children</h3>
@@ -179,7 +181,7 @@
 							<h3 id='sectionChild'> {{ child }} </h3>
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div id = "box_smoking" class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                             <div class="features-icons-icon d-flex"><i class="bi bi-clipboard-check m-auto text-primary"></i></div>
                             <h3>Smoking</h3>
@@ -187,7 +189,7 @@
 							<h3 id='sectionSmoking'> {{ smoking }} </h3>
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div id = "box_region" class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                             <div class="features-icons-icon d-flex"><i class="bi bi-clipboard-check m-auto text-primary"></i></div>
                             <h3>region</h3>
@@ -199,7 +201,7 @@
             </div>
         </section>
         <section class="features-icons bg-light text-center">
-            <div class="features-icons-item mx-auto mb-0 mb-lg-3">
+            <div id = "predic" class="features-icons-item mx-auto mb-0 mb-lg-3">
                 <div class="features-icons-icon d-flex"><i class="bi-terminal m-auto text-primary"></i></div>
                 <h3>Predicted Value</h3>
                 <p class="lead mb-0">Price Predicted!</p>
@@ -209,7 +211,7 @@
             </div>
         </div>
         </section>
-        <div class="features-icons-item mx-auto mb-0 mb-lg-3">
+        <div id="Total" class="features-icons-item mx-auto mb-0 mb-lg-3">
             <h3>Total Prediction: {{ total_pred }}</h3>
         </div>
         <!-- Image Showcases-->
