--- a/templates/login.html
+++ b/templates/login.html
@@ -33,7 +33,7 @@
                         </div> 
                         <button type="submit">Log In</button>
                         <div class="register">
-                            <p>Don't have an account? <a href="#">Sign Up</a></p>
+                            <p>Don't have an account? <a href="sign_up">Sign Up</a></p>
                         </div>
                     </form>
                     
