--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -26,7 +26,10 @@
                     </div>
                     <button type="submit">Sign Up</button>
                     <div class="register">
-                        <p>Already have an account? <a href="/login">Log In</a></p>
+                        <p>Already have an account? <a href="login">Log In</a></p>
+                    </div>
+                    <div class="is-created">
+                        <p style="color:red;"> {{ message_signup }} </p>
                     </div>
                 </form>
             </div>
