Add code (forgot_password)
+Update code SQL
+In static: create new file forgot_password.css
+In Templates: create new file forgot_password.html
+Update code file sign_up.html
+Update code file login.html
+Update code backend: update route(/sign_up and /login), create route /forgot_password

--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -24,6 +24,11 @@
                         <input type="password" name="password" required> 
                         <label>Password</label> 
                     </div>
+                    <div class="inputbox"> 
+                        <ion-icon name="people-outline"></ion-icon> 
+                        <label>Members in your family?</label>
+                        <input type="text" name="SR_Quest" required> 
+                    </div>
                     <button type="submit">Sign Up</button>
                     <div class="register">
                         <p>Already have an account? <a href="/login">Log In</a></p>
