--- a/templates/login.html
+++ b/templates/login.html
@@ -5,8 +5,6 @@
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>Document</title>
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <link rel='stylesheet' href='static/index.css'>
 </head>
 
@@ -29,7 +27,7 @@
                         </div>
                         <div class="forget"> 
                             <label><input type="checkbox">Remember Me</label> 
-                            <a href="#">Forgot Password</a> 
+                            <a href="/forgot_password">Forgot Password</a> 
                         </div> 
                         <button type="submit">Log In</button>
                         <div class="register">
@@ -43,4 +41,3 @@
 </body>
 
 </html>
-
