Further develop user function
+ Each user login session belong to their information only rather than the whole.

--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -26,7 +26,7 @@
                     </div>
                     <div class="inputbox"> 
                         <ion-icon name="people-outline"></ion-icon> 
-                        <label>Your secret key?</label>
+                        <label>Your secret key</label>
                         <input type="text" name="SR_Quest" required> 
                     </div>
                     <button type="submit">Sign Up</button>
