--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -21,7 +21,7 @@
                     </div>
                     <div class="inputbox"> 
                         <ion-icon name="people-outline"></ion-icon> 
-                        <label>Secret_Quest: Members in your family?</label>
+                        <label>Your secret key?</label>
                         <input type="text" name="SR_Quest" required> 
                     </div>
                     <div class="inputbox"> 
