--- a/templates/menu.html
+++ b/templates/menu.html
@@ -43,7 +43,7 @@
 							<div class="center-header">
                                 <!-- Page heading-->
                                 <table>
-                                <form action="{{ url_for('predict')}}" method="post">
+                                <form action="{{url_for('menu')}}" method="post">
                                 <tr>
 
                             <th>
@@ -201,7 +201,7 @@
             </div>
         </section>
         <section class="features-icons bg-light text-center">
-            <div id = "predic" class="features-icons-item mx-auto mb-0 mb-lg-3">
+            <div id = "predict" class="features-icons-item mx-auto mb-0 mb-lg-3">
                 <div class="features-icons-icon d-flex"><i class="bi-terminal m-auto text-primary"></i></div>
                 <h3>Predicted Value</h3>
                 <p class="lead mb-0">Price Predicted!</p>
